--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Potluck Planner",
+  "name": "Ben Rogers | Lambda School | Build Week Unit3",
   "icons": [
     {
       "src": "favicon.ico",
